# cookiecutter-tradinglab-container

./: LICENSE  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: build.yml
{{cookiecutter.github_repo_name}}/: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
{{cookiecutter.github_repo_name}}/.github/workflows/: build.yml  macos.yml  ubuntu.yml  windows.yml
{{cookiecutter.github_repo_name}}/tests/: test_{{cookiecutter.project_slug}}.py
