[tool.poetry]
name = "cookiecutter-tradinglab-container"
version = "0.1.0"
description = ""
authors = ["The TradingLab Development Team <dev@tradinglab.app>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cookiecutter = "^2.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
bump-my-version = "^0.21.0"
black = "^24.4.2"
flake8 = "^7.0.0"
pytest-runner = "^6.0.1"
cookiecutter = "^2.6.0"

[tool.distutils.bdist_wheel]
universal = true

[tool.bumpversion]
current_version = "0.0.1"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "cookiecutter_pypackage/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'


[tool.flake8]
exclude = [
    "docs",
]
max-line-length = 88

[project.urls]
Homepage = "https://github.com/TradingLab-app/cookiecutter-tradinglab-container"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
